--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -28,17 +28,26 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       # Step 3: Lint Python code
-      #### 
+      - name: Install and run flake8
+        run: |
+          pip install flake8
+          flake8 .
 
       # Step 4: Run Python tests
-      ####
+      - name: Run Python tests
+        run: |
+          pip install pytest
+          if [ -f pyest.ini ] || ls tests; then
+            pytest
+          else
+            echo "No tests found"
+          fi
 
   deploy:
     name: Deploy & Push to Docker Hub
     needs: [backend_flask]
     runs-on: ubuntu-latest
-    # Important step - add your environment name
-    # environment: PROD
+    environment: PROD
     steps:
         - uses: actions/checkout@v3
 
@@ -55,11 +64,16 @@ jobs:
     # add the Environment name to the deploy job above (important step)
     # https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions
     #### 
+        - name: Build Docker Image
+          run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest
 
     # Step 8: # Log in to Docker Hub
     #### 
-
+        - name: Log in to Docker Hub
+          run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
     # Step 8: Push docker image to dockerhub
     ####
+        - name: Push Docker Image
+          run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest
     
