--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -30,8 +30,8 @@ jobs:
       # Step 3: Lint Python code
       - name: Lint Python code
         run: |
-          if [ -f .flake8] || [ -f setup.cfg ] || [ -f tox.ini ] || [ -f .pep8 ]; then
-            flake8
+          if [ -f .flake8 ] || [ -f setup.cfg ] || [ -f tox.ini ] || [ -f .pep8 ]; then
+            flake8 .
           else
             echo "No linting configuration found"
           fi
@@ -43,7 +43,7 @@ jobs:
           if [ -f pyest.ini ] || ls tests; then
             pytest
           else
-            echo "No tests found"
+            echo "No tests found, skipping tests."
           fi
 
   deploy:
@@ -71,8 +71,7 @@ jobs:
           run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest
 
         - name: Log in to Docker Hub
-          run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+          run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
         - name: Push Docker Image
           run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend_flask:latest
-    
